--- a/hw1/submission_template/scripts/tweet_analysis.ipynb
+++ b/hw1/submission_template/scripts/tweet_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd"
    ],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "# read in first 10000 rows from csv\r\n",
     "df = pd.read_csv('../data/IRAhandle_tweets_1.csv', nrows=10000)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "# filter by english language then by not containing '\\?'\r\n",
     "english_df = df[df['language'] == 'English']\r\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "# write to tsv\r\n",
     "result_df.to_csv('../data/clean_data.tsv', sep='\\t', index=False)"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "# read in cleaned data\r\n",
     "clean_df = pd.read_csv('../data/clean_data.tsv', sep='\\t')\r\n"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "# add feature 'trump_mention'\r\n",
     "clean_df['trump_mention'] = clean_df['content'].str.contains(\r\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "# write to tsv\r\n",
     "clean_df.to_csv('../dataset.tsv', sep='\\t', index=False,\r\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
     "# read in dataset\r\n",
     "dataset_df = pd.read_csv('../dataset.tsv', sep='\\t')"
@@ -114,20 +114,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "source": [
     "# calculate the percent trump mention\r\n",
     "frac = len(dataset_df[dataset_df['trump_mention']].index)/len(dataset_df.index)\r\n",
-    "percent = round(frac * 100, 3)\r\n",
-    "print(percent)\r\n"
+    "frac\r\n"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2.249\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.022490628904623073"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "# write to results\r\n",
+    "with open('../results.tsv', 'w') as f:\r\n",
+    "    f.write(f'result\\tvalue\\nfrac-trump-mentions\\t{frac}')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "dup = dataset_df[dataset_df.duplicated(['content'])]\r\n",
+    "dup['content']\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "103     Twitter censors conservarives, yet hateful Ant...\n",
+       "114     Steve Bannon on Hillary Clinton: \"She's not ve...\n",
+       "116     President Trump says he will visit Florida soo...\n",
+       "126     This is priceless!! Laura Loomer sneaks into H...\n",
+       "163     CNN won't show it's viewers these amazing patr...\n",
+       "186     CNN broadcast cut off an African-American Trum...\n",
+       "213     The fact that Obama was wiretapping Trump Towe...\n",
+       "227     If Melania Trump was a liberal Democrat, she'd...\n",
+       "230        '@realDonaldTrump We love you, Mr. President!'\n",
+       "239     Floyd Mayweather defends Trump: \"You never hea...\n",
+       "256     A Maine woman says that she would rather go to...\n",
+       "285         '@realDonaldTrump We love you Mr. President!'\n",
+       "290     Daughter of fallen Navy Sailor delivers powerf...\n",
+       "297     Chicago teacher places flag on the ground for ...\n",
+       "310     Because of #FakeNews my people are not getting...\n",
+       "326     You won't see this on CNN https://t.co/N8ZqZso4sC\n",
+       "334     There's a White House petition to protect our ...\n",
+       "335     United we stand, divided we fall. Sign the pet...\n",
+       "338     #IfIWerePresidentForOneDay I would condemn cen...\n",
+       "340     The new face of censorship. We need to fight b...\n",
+       "4200             '@howiemandel @nbcagt #BlackLivesMatter'\n",
+       "4465                     '@selenagomez #BlackLivesMatter'\n",
+       "4469                     '@selenagomez #BlackLivesMatter'\n",
+       "Name: content, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "len(dup.index)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
     }
    ],
    "metadata": {}
